# geneinsight

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: .buildinfo  genindex.html  getting_started.html  index.html  installation.html  search.html  searchindex.js
docs/_sources/: getting_started.rst.txt
docs/_sources/architecture/: workflow.rst.txt
docs/_sources/examples/: index.rst.txt
docs/_sources/theory/: enrichment.rst.txt  (+3 more)
docs/architecture/: workflow.html
docs/doctrees/: environment.pickle  index.doctree
docs/examples/: basic.html  index.html
docs/html/: getting_started.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/theory/: enrichment.html  overview.html  topic_modeling.html
docs/usage/: api.html  index.html  output.html  results.html
geneinsight/: __init__.py  cli.py  config.py  instrumentation.py  pipeline.py
geneinsight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
geneinsight/analysis/: __init__.py  clustering.py  counter.py  similarity.py  summary.py
geneinsight/api/: __init__.py  client.py  get_summary.py
geneinsight/enrichment/: hypergeometric.py  stringdb.py  stringdb_local.py
geneinsight/examples/: README.md  sample.txt  sample_background.txt
geneinsight/models/: bertopic.py  meta.py
geneinsight/ontology/: __init_.py  calculate_ontology_enrichment.py  get_ontology_dictionary.py  merge_context_and_ontology_dict.py  workflow.py
geneinsight/report/: __init__.py  circleplot.py  collect_context.py  context_merge.py  file_handlers.py  geneplotter.py  generate_download_rst.py  generate_rst_from_files.py  get_ontology_dictionary.py  get_rst_summary_page.py  json_summary.py  making_embedding_circleplot.py  pipeline.py  rst_generator.py  sphinx_build.py  sphinx_builder.py  summary.py
geneinsight/scripts/: geneinsight_api_process.py  geneinsight_counter.py  geneinsight_enrichment.py  geneinsight_examples.py  geneinsight_hypergeometric.py  geneinsight_meta.py  geneinsight_prompt_gen.py  geneinsight_report.py  geneinsight_report_pipeline.py  geneinsight_run.py  geneinsight_topic_modeling.py
geneinsight/utils/: __init__.py  helpers.py  zip_helper.py
geneinsight/workflows/: __init__.py  prompt_generation.py
reproducibility/: README.md
reproducibility/cosine_and_moverscore_workflow/: README.md  Snakefile
reproducibility/hyperparameter_worfklow/: README.md  Snakefile  environment.yml  requirements.txt
reproducibility/test_set_workflow/: README.md  Snakefile  requirements.txt
reproducibility/visualisation_workflow/: Snakefile  requirements.txt
tests/: conftest.py  test_bertopic.py  test_calculate_ontology_enrichment.py  test_cli.py  test_client.py  test_clustering.py  test_config.py  test_counter.py  test_file_handlers.py  test_get_summary.py  test_helpers.py  test_hypergeometric.py  test_instrumentation.py  test_merge_context_ontology.py  test_meta.py  test_ontology_dictionary.py  test_ontology_enrichment.py  test_ontology_workflow.py  test_pipeline.py  test_prompt_generation.py  test_robustness.py  test_similarity.py  test_stringdb.py  test_stringdb_local.py  test_summary.py  test_zip_helper.py
topicgenes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+80 files in other folders)
